--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!------------------------------------>
 <!--| Written By..: AJ             |-->
 <!--| Date Written: June 23, 2024  |-->
+<!--| Last Written: July 11, 2024  |-->
 <!--| Purpose.....: Portfolio HTML |-->
 <!------------------------------------>
 
@@ -19,9 +20,19 @@
             <div> 
                 <ul class="nav-links">
                     <li><a href="#about"> About </a></li>
-                    <li><a href="#experience"> Experience </a></li>
+                    <li><a href="#experience"> Skills </a></li>
                     <li><a href="#projects"> Projects </a></li>
                     <li><a href="#contact"> Contact </a></li>
+                    <li>
+                        <img
+                            id="modeToggle"
+                            class="icon color-icon" 
+                            src="./assets/theme_light.png" 
+                            src-light="./assets/theme_light.png"
+                            src-dark="./assets/theme_dark.png"
+                            alt="Color Theme Icon"
+                        >
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -35,9 +46,19 @@
                 </div>
                 <div class="menu-links">
                     <li><a href="#about" onclick="toggleMenu()"> About </a></li>
-                    <li><a href="#experience" onclick="toggleMenu()"> Experience </a></li>
+                    <li><a href="#experience" onclick="toggleMenu()"> Skills </a></li>
                     <li><a href="#projects" onclick="toggleMenu()"> Projects </a></li>
                     <li><a href="#contact" onclick="toggleMenu()"> Contact </a></li>
+                    <li>
+                        <img
+                            id="modeToggle2"
+                            class="icon color-icon" 
+                            src="./assets/theme_light.png" 
+                            src-light="./assets/theme_light.png"
+                            src-dark="./assets/theme_dark.png"
+                            alt="Color Theme Icon"
+                        >
+                    </li>
                 </div>
             </div>
         </nav>
@@ -58,12 +79,20 @@
                     </button>
                 </div>
                 <div id="socials-container">
-                    <img src="./assets/linkedin.png" alt="My LinkedIn Profile" 
-                    class="icon" 
-                    onclick="location.href='https://www.linkedin.com/in/anthony-terry-91a560286/'">
-                    <img src="./assets/github.png" alt="My GitHub Profile" 
-                    class="icon" 
-                    onclick="location.href='https://github.com/MarioTeachesTyping'">
+                    <img src="./assets/linkedin_light.png" 
+                    src-light="./assets/linkedin_light.png"
+                    src-dark="./assets/linkedin_dark.png"
+                    alt="My LinkedIn Profile" 
+                    class="icon linkedin-icon" 
+                    onclick="location.href='https://www.linkedin.com/in/anthony-terry-91a560286/'"
+                    >
+                    <img src="./assets/github_light.png" 
+                    src-light="./assets/github_light.png"
+                    src-dark="./assets/github_dark.png"
+                    alt="My GitHub Profile" 
+                    class="icon github-icon" 
+                    onclick="location.href='https://github.com/MarioTeachesTyping'"
+                    >
                 </div>
             </div>
         </section>
@@ -78,12 +107,22 @@
                 <div class="about-details-container">
                     <div class="about-containers">
                         <div class="details-container">
-                            <img src="./assets/experience.png" alt="Experience Icon" class="icon">
+                            <img src="./assets/experience_light.png"
+                            src-light="./assets/experience_light.png"
+                            src-dark="./assets/experience_dark.png" 
+                            alt="Experience Icon" 
+                            class="icon"
+                            >
                             <h3> Experience </h3>
                             <p> Walgreens <br> Customer Service Associate <br> 2022 </p>
                         </div>
                         <div class="details-container">
-                            <img src="./assets/education.png" alt="Education Icon" class="icon">
+                            <img src="./assets/education_light.png"
+                            src-light="./assets/education_light.png" 
+                            src-dark="./assets/education_dark.png"
+                            alt="Education Icon" 
+                            class="icon"
+                            >
                             <h3> Education </h3>
                             <p> Bachelor of Science in Computer Science 
                             <br> University of Central Florida <br> Expected 2026 </p>
@@ -98,33 +137,53 @@
                     </div>
                 </div>
             </div>
-            <img src="./assets/arrow.png" alt="Arrow Icon" class="icon arrow" 
-            onclick="location.href='./#experience'">
+            <img src="./assets/arrow_light.png" 
+            src-light="./assets/arrow_light.png"
+            src-dark="./assets/arrow_dark.png"
+            alt="Arrow Icon" 
+            class="icon arrow" 
+            onclick="location.href='./#experience'"
+            >
         </section>
         <section id="experience">
             <p class="section__text__p1"> Explore My </p>
-            <h1 class="title"> Experience </h1>
+            <h1 class="title"> Skills </h1>
             <div class="experience-details-container">
                 <div class="about-containers">
                     <div class="details-container">
                         <h2 class="experience-sub-title"> Front-End Development </h2>
                         <div class="article-container">
                             <article>
-                                <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
                                 <div>
                                     <h3> HTML </h3>
                                     <p> Intermediate </p>
                                 </div>
                             </article>
                             <article>
-                                <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
                                 <div>
                                     <h3> CSS </h3>
                                     <p> Intermediate </p>
                                 </div>
                             </article>
                             <article>
-                                <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
                                 <div>
                                     <h3> JavaScript </h3>
                                     <p> Basic </p>
@@ -136,30 +195,62 @@
                         <h2 class="experience-sub-title"> Back-End Development </h2>
                         <div class="article-container">
                             <article>
-                                <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
                                 <div>
                                     <h3> Python </h3>
                                     <p> Intermediate </p>
                                 </div>
                             </article>
                             <article>
-                                <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
                                 <div>
                                     <h3> Java </h3>
                                     <p> Experienced </p>
                                 </div>
                             </article>
                             <article>
-                                <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
                                 <div>
                                     <h3> C/C++ </h3>
                                     <p> Intermediate </p>
                                 </div>
                             </article>
                             <article>
-                                <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
                                 <div>
                                     <h3> C# </h3>
+                                    <p> Basic </p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
+                                <div>
+                                    <h3> MySQL </h3>
                                     <p> Basic </p>
                                 </div>
                             </article>
@@ -167,8 +258,13 @@
                     </div>
                 </div>
             </div>
-            <img src="./assets/arrow.png" alt="Arrow Icon" class="icon arrow" 
-            onclick="location.href='./#projects'">
+            <img src="./assets/arrow_light.png" 
+            src-light="./assets/arrow_light.png"
+            src-dark="./assets/arrow_dark.png"
+            alt="Arrow Icon" 
+            class="icon arrow" 
+            onclick="location.href='./#projects'"
+            >
         </section>
         <section id="projects">
             <p class="section__text__p1"> Browse My Main </p>
@@ -213,19 +309,35 @@
                     </div>
                 </div>
             </div>
-            <img src="./assets/arrow.png" alt="Arrow Icon" class="icon arrow" 
-            onclick="location.href='./#contact'">
+            <img src="./assets/arrow_light.png" 
+            src-light="./assets/arrow_light.png"
+            src-dark="./assets/arrow_dark.png"
+            alt="Arrow Icon" 
+            class="icon arrow" 
+            onclick="location.href='./#contact'"
+            >
         </section>
         <section id="contact">
             <p class="section__text__p1"> Get in Touch </p>
             <h1 class="title"> Contact Me </h1>
             <div class="contact-info-upper-container">
                 <div class="contact-info-container">
-                    <img src="./assets/email.png" alt="Email Icon" class="icon contact-icon email-icon">
+                    <img src="./assets/email_light.png" 
+                    src-light="./assets/email_light.png"
+                    src-dark="./assets/email_dark.png"
+                    alt="Email Icon" 
+                    class="icon contact-icon email-icon"
+                    >
                     <p><a href="mailto:terryant64@gmail.com"> terryant64@gmail.com </a></p>
                 </div>
                 <div class="contact-info-container">
-                    <img src="./assets/linkedin.png" alt="LinkedIn Icon" class="icon contact-icon">
+                    <img src="./assets/linkedin_light.png" 
+                    src-light="./assets/linkedin_light.png"
+                    src-dark="./assets/linkedin_dark.png"
+                    alt="My LinkedIn Profile" 
+                    class="icon linkedin-icon" 
+                    onclick="location.href='https://www.linkedin.com/in/anthony-terry-91a560286/'"
+                    >
                     <p><a href="https://www.linkedin.com/in/anthony-terry-91a560286/"> LinkedIn </a></p>
                 </div>
             </div>
@@ -235,7 +347,7 @@
                 <div class="nav-links-container">
                     <ul class="nav-links">
                         <li><a href="#about"> About </a></li>
-                        <li><a href="#experience"> Experience </a></li>
+                        <li><a href="#experience"> Skills </a></li>
                         <li><a href="#projects"> Projects </a></li>
                         <li><a href="#contact"> Contact </a></li>
                     </ul>
