--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!------------------------------------>
 <!--| Written By..: AJ             |-->
-<!--| Date Written: June 23, 2024  |-->
-<!--| Last Written: July 11, 2024  |-->
+<!--| Date Written: Jun. 23, 2024  |-->
+<!--| Last Written: Sep. 14, 2024  |-->
 <!--| Purpose.....: Portfolio HTML |-->
 <!------------------------------------>
 
@@ -125,7 +125,7 @@
                             >
                             <h3> Education </h3>
                             <p> Bachelor of Science in Computer Science 
-                            <br> University of Central Florida <br> Expected 2026 </p>
+                            <br> University of Central Florida <br> May 2026 </p>
                         </div>
                     </div>
                     <div class="text-container">
@@ -147,11 +147,11 @@
         </section>
         <section id="experience">
             <p class="section__text__p1"> Explore My </p>
-            <h1 class="title"> Skills </h1>
+            <h1 class="title"> Technical Skills </h1>
             <div class="experience-details-container">
                 <div class="about-containers">
                     <div class="details-container">
-                        <h2 class="experience-sub-title"> Front-End Development </h2>
+                        <h2 class="experience-sub-title"> Languages </h2>
                         <div class="article-container">
                             <article>
                                 <img src="./assets/checkmark_light.png" 
@@ -161,39 +161,10 @@
                                 class="icon"
                                 >
                                 <div>
-                                    <h3> HTML </h3>
+                                    <h3> Java </h3>
                                     <p> Intermediate </p>
                                 </div>
                             </article>
-                            <article>
-                                <img src="./assets/checkmark_light.png" 
-                                src-light="./assets/checkmark_light.png"
-                                src-dark="./assets/checkmark_dark.png"
-                                alt="Experience Icon" 
-                                class="icon"
-                                >
-                                <div>
-                                    <h3> CSS </h3>
-                                    <p> Intermediate </p>
-                                </div>
-                            </article>
-                            <article>
-                                <img src="./assets/checkmark_light.png" 
-                                src-light="./assets/checkmark_light.png"
-                                src-dark="./assets/checkmark_dark.png"
-                                alt="Experience Icon" 
-                                class="icon"
-                                >
-                                <div>
-                                    <h3> JavaScript </h3>
-                                    <p> Basic </p>
-                                </div>
-                            </article>
-                        </div>
-                    </div>
-                    <div class="details-container">
-                        <h2 class="experience-sub-title"> Back-End Development </h2>
-                        <div class="article-container">
                             <article>
                                 <img src="./assets/checkmark_light.png" 
                                 src-light="./assets/checkmark_light.png"
@@ -204,18 +175,6 @@
                                 <div>
                                     <h3> Python </h3>
                                     <p> Intermediate </p>
-                                </div>
-                            </article>
-                            <article>
-                                <img src="./assets/checkmark_light.png" 
-                                src-light="./assets/checkmark_light.png"
-                                src-dark="./assets/checkmark_dark.png"
-                                alt="Experience Icon" 
-                                class="icon"
-                                >
-                                <div>
-                                    <h3> Java </h3>
-                                    <p> Experienced </p>
                                 </div>
                             </article>
                             <article>
@@ -250,7 +209,185 @@
                                 class="icon"
                                 >
                                 <div>
+                                    <h3> HTML </h3>
+                                    <p> Intermediate </p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
+                                <div>
+                                    <h3> CSS </h3>
+                                    <p> Intermediate </p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
+                                <div>
+                                    <h3> JavaScript/TypeScript </h3>
+                                    <p> Intermediate </p>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="details-container">
+                        <h2 class="experience-sub-title"> Frameworks </h2>
+                        <div class="article-container">
+                            <article>
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
+                                <div>
+                                    <h3> React </h3>
+                                    <p> Basic </p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
+                                <div>
+                                    <h3> Node.js </h3>
+                                    <p> Intermediate </p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
+                                <div>
+                                    <h3> Angular </h3>
+                                    <p> Intermediate </p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
+                                <div>
                                     <h3> MySQL </h3>
+                                    <p> Basic </p>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="details-container">
+                        <h2 class="experience-sub-title"> Developer Tools </h2>
+                        <div class="article-container">
+                            <article>
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
+                                <div>
+                                    <h3> Git </h3>
+                                    <p> Intermediate </p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
+                                <div>
+                                    <h3> VS Code </h3>
+                                    <p> Experienced </p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
+                                <div>
+                                    <h3> Visual Studio </h3>
+                                    <p> Intermediate </p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
+                                <div>
+                                    <h3> PyCharm </h3>
+                                    <p> Basic </p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
+                                <div>
+                                    <h3> IntelliJ </h3>
+                                    <p> Basic </p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
+                                <div>
+                                    <h3> Eclipse </h3>
+                                    <p> Intermediate </p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
+                                <div>
+                                    <h3> Unity </h3>
+                                    <p> Intermediate </p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark_light.png" 
+                                src-light="./assets/checkmark_light.png"
+                                src-dark="./assets/checkmark_dark.png"
+                                alt="Experience Icon" 
+                                class="icon"
+                                >
+                                <div>
+                                    <h3> Android Studio </h3>
                                     <p> Basic </p>
                                 </div>
                             </article>
@@ -275,7 +412,11 @@
                         <div class="article-container">
                             <img src="./assets/project-1.JPG" alt="Project 1" class="project-img">
                         </div>
-                        <h2 class="experience-sub-title project-title"> TECH Website </h2>
+                        <h2 class="experience-sub-title project-title"> Modern Technology Website </h2>
+                        <p> Constructed a technology informative website that is cross-platform compatible with support to portrait and landscape
+                            modes, which enhances usability on multiple devices. 
+                        </p>
+                        <p> - </p>
                         <div class="btn-container">
                             <button class="btn btn-color-2 project-btn" 
                             onclick="location.href='https://github.com/MarioTeachesTyping/Main-Projects/tree/TECH-Website'">
@@ -288,6 +429,10 @@
                             <img src="./assets/project-2.png" alt="Project 2" class="project-img">
                         </div>
                         <h2 class="experience-sub-title project-title"> Word Search </h2>
+                        <p> Designed a Word Search Game that allows the user to input words in a 
+                            10x10 grid showcasing multidimensional arrays. 
+                        </p>
+                        <p> - </p>
                         <div class="btn-container">
                             <button class="btn btn-color-2 project-btn" 
                             onclick="location.href='https://github.com/MarioTeachesTyping/Main-Projects/blob/main/Word%20Search'">
@@ -300,6 +445,10 @@
                             <img src="./assets/project-3.png" alt="Project 3" class="project-img">
                         </div>
                         <h2 class="experience-sub-title project-title"> Exam Menu </h2>
+                        <p> Displays a menu with different options ranging from letting the user input 
+                            new exam grades, display them from high to low or low to high, and more.
+                        </p>
+                        <p> - </p>
                         <div class="btn-container">
                             <button class="btn btn-color-2 project-btn" 
                             onclick="location.href='https://github.com/MarioTeachesTyping/Main-Projects/blob/main/Exam%20Menu'">
