--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </nav>
         <section id="profile">
             <div class="section__pic-container">
-                <img src="./assets/business-pfp.jpg" alt="Anthony Terry PFP">
+                <img src="./assets/business-pfp.jpeg" alt="Anthony Terry PFP">
             </div>
             <div class="section__text">
                 <p class="section__text__p1"> Hello I'm </p>
